# readme-gen

./: .gitignore  README.md  pyproject.toml
readme_gen/: __init__.py  cli.py  generator.py  scanner.py
tests/: test_scanner.py
