[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "readme-gen"
version = "0.1.0"
description = "Generate HN-optimized README in 60 seconds"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "takawasi" }
]
keywords = ["readme", "documentation", "llm", "cli", "generator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
readme-gen = "readme_gen.cli:main"

[project.urls]
Homepage = "https://github.com/takawasi/readme-gen"
Repository = "https://github.com/takawasi/readme-gen"

[tool.hatch.build.targets.wheel]
packages = ["readme_gen"]
